Fix modal appearance on small resolution screen

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -46,7 +46,7 @@
   font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 24px;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 .modal__text-input {
@@ -102,8 +102,15 @@
     max-width: 90%;
   }
 
+  .modal__header {
+    font-size: 18px;
+  }
+
   .modal__close {
-    top: -59px;
+    width: 26px;
+    height: 26px;
+    top: -40px;
     right: 10px;
+    background-size: 26px;
   }
 }
